I have to populate the other grids and make a functionable filter

--- a/html/snowboards.html
+++ b/html/snowboards.html
@@ -7,27 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="css/header.css"> 
-    <link rel="stylesheet" href="css/product-landing.css">
+    <link rel="stylesheet" href="../css/header.css"> 
+    <link rel="stylesheet" href="../css/product-landing.css">
     <script src="https://kit.fontawesome.com/a494238601.js" crossorigin="anonymous"></script>
 
 
 </head>
 
 <body>
-
     <header>
 
-        <h1 class="header__h1"><a class="header__link" href="index.html">SNOWDEVIL.</a></h1>
+        <h1 class="header__h1"><a class="header__link" href="../index.html">SNOWDEVIL.</a></h1>
 
         <nav class="header__nav-bar">
             <ul class ='header__nav-bar-ul' id="header__left-nav-bar-ul">
 
-                <li class="header__nav-bar-li"><a class="header__link" href="html/snowboards.html">Snowboards</a></li>
-                <li class="header__nav-bar-li"><a class="header__link" href="html/bindings.html">Bindings</a></li>
-                <li class="header__nav-bar-li"><a class="header__link" href="html/boots.html">Boots</a></li>
-                <li class="header__nav-bar-li"><a class="header__link" href="html/helmets.html">Helmets</a></li>
-                <li class="header__nav-bar-li"><a class="header__link" href="html/goggles.html">Goggles</a></li>
+                <li class="header__nav-bar-li"><a class="header__link" href="snowboards.html">Snowboards</a></li>
+                <li class="header__nav-bar-li"><a class="header__link" href="bindings.html">Bindings</a></li>
+                <li class="header__nav-bar-li"><a class="header__link" href="boots.html">Boots</a></li>
+                <li class="header__nav-bar-li"><a class="header__link" href="helmets.html">Helmets</a></li>
+                <li class="header__nav-bar-li"><a class="header__link" href="goggles.html">Goggles</a></li>
             </ul>
 
             <ul class ='header__nav-bar-ul' id='header__right-nav-bar-ul'>
@@ -42,11 +41,11 @@
     </header>
 
     <main>
-        <h2>Productos destacados</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem velit suscipit porro eum atque beatae. A exercitationem vitae voluptate nihil atque ea consectetur officia eos ut mollitia. Nostrum porro recusandae, eveniet beatae incidunt vero ut cupiditate, corrupti nemo perspiciatis velit quis minima iure dolor exercitationem ipsa itaque placeat? Doloremque, temporibus?</p>
         <!--Por ahora solo divs vacios, esta semana se completara-->
-        <div id="slide-feature-products"></div>
-        <div id="grid-all-products"></div>
+        <h2>Our offers</h2>
+        <div class='container' id="container-offer">
+
+        </div>
     </main>
 
     <footer>
