--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class ='header__nav-bar-ul' id='header__right-nav-bar-ul'>
 
                 <li class="header__nav-bar-li"><a class="header__link" href="shopping-cart.html"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-                <li class="header__nav-bar-li"><a class="header__link" href="shopping-cart.html"><i class="fa-solid fa-location-dot"></i></a></li>
+                <li class="header__nav-bar-li"><a class="header__link" href="store-info.html"><i class="fa-solid fa-location-dot"></i></a></li>
                 <li class="header__nav-bar-li"><a class="header__link" href="shopping-cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
                 <li class="header__nav-bar-li"><a class="header__link" href="shopping-cart.html"><i class="fa-solid fa-user"></i></a></li>
                 
