--- a/html/helmets.html
+++ b/html/helmets.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="../css/header.css"> 
     <link rel="stylesheet" href="../css/product-gallery.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/index.css">
+
+    <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/a494238601.js" crossorigin="anonymous"></script>
 
 
@@ -68,6 +71,9 @@
         </div>
 
         </div>
+
+        <hr/>
+
 
         <div class='main__product-container-grid'>
             <!-- <div class="main__product-item-grid main__product-flex-container">
