--- a/html/snowboards.html
+++ b/html/snowboards.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="../css/header.css"> 
     <link rel="stylesheet" href="../css/product-gallery.css">
     <link rel="stylesheet" href="../css/footer.css">
-    
+    <link rel="stylesheet" href="../css/index.css">
+
+    <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/a494238601.js" crossorigin="anonymous"></script>
 
 
@@ -68,6 +70,8 @@
         </div>
 
         </div>
+
+        <hr>
 
         <div class='main__product-container-grid'>
             <!-- <div class="main__product-item-grid main__product-flex-container">
@@ -164,6 +168,7 @@
     </footer>
 
     <script type="module" src="../dist/index.js" defer></script>
+
 
 </body>
 
