--- a/html/store-info.html
+++ b/html/store-info.html
@@ -18,11 +18,15 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/store-info.css">
     <link rel="stylesheet" href="../css/product-gallery.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/newsletter.css">
 
 
 
 
 
+
+    <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/a494238601.js" crossorigin="anonymous"></script>
 
 </head>
@@ -110,7 +114,7 @@
                                 <textarea class="form__text-area" id="form__input-textarea" name="form__input-textarea" placeholder="Write here"
                                     cols="13" rows="6" role="textbox"></textarea>
 
-
+                                <input type="submit" class="form__submit query">
                             </form>
 
 
