eliminated ad on store-info page

--- a/html/store-info.html
+++ b/html/store-info.html
@@ -175,7 +175,10 @@
 
                 </section>
 
-                </div>
+                <aside class="main__aside-vertical-ad">
+                </aside>
+
+            </div>
 
 
         </main>
